# openai-gym-reinforcement-learning-lab

./: .gitignore  Dockerfile  README.md  RL_METHODS.md  pyproject.toml  requirements.txt  方法对比.md
RL_OLD_DEMO/: README.md  demo_dqn.py  demo_ppo.py  demo_sac.py  demo_safe.py
experiments/01-frozenlake-tabular-q-learning/: frozenlake-ppo.ipynb  frozenlake-random-baseline.ipynb  frozenlake-tabular-q-learning.ipynb
experiments/02-frozenlake-value-iteration/: frozenlake-random-baseline.ipynb  frozenlake-value-iteration.ipynb
experiments/03-cliffwalking-sarsa/: cliffwalking-random-baseline.ipynb  cliffwalking-sarsa.ipynb
experiments/04-cliffwalking-q-learning/: cliffwalking-q-learning.ipynb  cliffwalking-random-baseline.ipynb
experiments/05-taxi-tabular-q-learning/: taxi-random-baseline.ipynb  taxi-tabular-q-learning.ipynb
experiments/06-blackjack-monte-carlo-control/: blackjack-monte-carlo-control.ipynb  blackjack-random-baseline.ipynb
experiments/07-cartpole-dqn/: cartpole-dqn.ipynb  cartpole-ppo.ipynb  cartpole-random-baseline.ipynb
experiments/08-cartpole-double-dqn/: cartpole-double-dqn.ipynb  cartpole-ppo.ipynb  cartpole-random-baseline.ipynb
experiments/09-acrobot-dqn/: acrobot-dqn.ipynb  acrobot-random-baseline.ipynb
experiments/10-mountaincar-dqn/: mountaincar-dqn.ipynb  mountaincar-random-baseline.ipynb
experiments/11-pendulum-ddpg/: pendulum-ddpg.ipynb  pendulum-random-baseline.ipynb
experiments/12-pendulum-sac/: pendulum-random-baseline.ipynb  pendulum-sac.ipynb
experiments/13-mountaincarcontinuous-ddpg/: mountaincarcontinuous-ddpg.ipynb  (+1 more)
(+142 files in other folders)
